<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NorthAmericanBanCardSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="TransactionName_prompt">Choose a transaction name</string>
    <string name="state_prompt">Choose a state</string>
     <string name="cardType_prompt">Choose a card type</string>
      <string name="month_prompt">Choose a month</string>
       <string name="year_prompt">Choose a year</string>
         <string name="CurrencyCode_prompt">Choose a currencyCode</string>
        <string-array name="TransactionName_arrays">
         <item>Verify</item>
        <item>Authorize W/Token</item>
         <item>Authorize W/OToken</item>
         <item> P2PE Authorize</item>
        <item>AuthorizeAndCapture W/Token</item>
        <item>AuthorizeAndCapture W/OToken</item>
        <item>P2PE AuthorizeAndCapture</item>
         <item>Capture</item>
        <item>Undo</item>
        <item>Adjust</item>
        <item>ReturnById</item>
        <item>ReturnUnlinked W/Token</item>
        <item>ReturnUnlinked W/OToken</item>
         <item>P2PE ReturnUnlinked</item>
        <item>QueryTransactionalDetails</item>
         <item>CaptureAll</item>
       </string-array>
      <string-array name="state_arrays">
        <item>Colorado</item>
        <item>Newyork</item>
      </string-array>
      <string-array name="state_names"> 
     <item>CO</item> 
     <item>NY</item>
    </string-array>
       <string-array name="cardType_arrays">
        <item>Visa</item>
        <item>MasterCard</item>
         <item>Discover</item>
        <item>AmericanExpress</item>
        </string-array>
        <string-array name="entryMode_arrays">
        <item>Keyed</item>
        <item>TrackDataFromMSR</item>  
        </string-array>
         <string-array name="workflowId_arrays">
        <item>2317000001(Normal)</item>
        <item>BBBAAA0001(P2PE)</item>
         <item>A39DF00001(CaptureAll)</item>
         </string-array>
          <string-array name="workflowId_names">
        <item>2317000001</item>
        <item>BBBAAA0001</item>
         <item>A39DF00001</item>
         </string-array>
       <string-array name="appProfileId_arrays">
        <item>14644(Normal)</item>
        <item>14560(P2PE)</item>
         <item>15464(CaptureAll)</item>
      </string-array>
      <string-array name="appProfileId_names">
        <item>14644</item>
        <item>14560</item>
         <item>15464</item>
      </string-array>
       <string-array name="month_arrays">
        <item>Jan</item>
        <item>Feb</item>
         <item>Mar</item>
        <item>Apr</item>
         <item>May</item>
        <item>Jun</item>
         <item>Jul</item>
        <item>Aug</item>
         <item>Sep</item>
        <item>Oct</item>
         <item>Nov</item>
        <item>Dec</item>
      </string-array>
       <string-array name="year_arrays">
        <item>2013</item>
        <item>2014</item>
         <item>2015</item>
        <item>2016</item>
         <item>2017</item>
        <item>2018</item>
         <item>2019</item>
        <item>2020</item>
         <item>2021</item>
        <item>2022</item>
         <item>2023</item>
        </string-array>
    <string-array name="CurrencyCode_arrays"> 
     <item>USD</item> 
     <item>INR</item>
    </string-array>
      

</resources>
